syntax = "proto3";
package bash;


message CommandRequest{
    // Actual command to run
    string command = 1;
    // Current working directory
    string cwd = 2;
}

message CommandResponse{
    // Standard output
    string stdout = 1;
    // Standard error
    string stderr = 2;
    // Exit status
    int32 exitStatus = 3;
}

service BashService{
    // Run a command
    rpc Execute (CommandRequest) returns (CommandResponse) {}
    rpc ExecuteAndStream (CommandRequest) returns (stream CommandResponse) {}
}